--- a/test.html
+++ b/test.html
@@ -1,3 +1,60 @@
-<html>
-<h1>test</h1>
-</html>
+<!DOCTYPE html>
+<html lang="ko"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <title>경영1332083 조항성 자기소개 페이지</title>
+    <link rel="stylesheet" href="./3월 29일 웹프 실습_files/항성이스타일씨트.css">
+    <script src="./3월 29일 웹프 실습_files/이거잡아바자바.js"></script>
+<style>
+
+ h1 { border-radius: 133px 133px 133px 133px;
+     -moz-border-radius: 133px 133px 133px 133px;
+     -webkit-border-radius: 133px 133px 133px 133px;
+     border: 0px solid #000000;
+     text-align: center;
+     background: rgba(255,0,132,1);
+     background: -moz-linear-gradient(left, rgba(255,0,132,1) 0%, rgba(241,111,92,1) 33%, rgba(241,111,92,1) 70%, rgba(255,0,132,1) 98%, rgba(255,0,132,1) 100%);
+     background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,0,132,1)), color-stop(33%, rgba(241,111,92,1)), color-stop(70%, rgba(241,111,92,1)), color-stop(98%, rgba(255,0,132,1)), color-stop(100%, rgba(255,0,132,1)));
+     background: -webkit-linear-gradient(left, rgba(255,0,132,1) 0%, rgba(241,111,92,1) 33%, rgba(241,111,92,1) 70%, rgba(255,0,132,1) 98%, rgba(255,0,132,1) 100%);
+     background: -o-linear-gradient(left, rgba(255,0,132,1) 0%, rgba(241,111,92,1) 33%, rgba(241,111,92,1) 70%, rgba(255,0,132,1) 98%, rgba(255,0,132,1) 100%);
+     background: -ms-linear-gradient(left, rgba(255,0,132,1) 0%, rgba(241,111,92,1) 33%, rgba(241,111,92,1) 70%, rgba(255,0,132,1) 98%, rgba(255,0,132,1) 100%);
+     background: linear-gradient(to right, rgba(255,0,132,1) 0%, rgba(241,111,92,1) 33%, rgba(241,111,92,1) 70%, rgba(255,0,132,1) 98%, rgba(255,0,132,1) 100%);
+     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0084', endColorstr='#ff0084', GradientType=1 );}
+    .floating-box {
+        display: inline-block;
+        width: 300px;
+        margin: 10px;
+        border: 3px solid deepskyblue;
+        float: left;
+        box-shadow: 5px 5px 5px black;
+    }
+
+</style>
+</head>
+<body>
+<div class="floating-box">
+    <h1> 누구십니까? </h1>
+    <p> 경영학과 4학년 23살 조항성입니다. </p>
+</div>
+
+<div class="floating-box">
+    <h1> 사는곳은 어디죠? </h1>
+    <p> 서울특별시 양천구 목2동 목동파크뷰 401호에 삽니다. 과자라도 보내주세요. </p>
+</div>
+
+<div class="floating-box">
+    <h1> 이 수업은 왜 듣습니까? </h1>
+    <p> 연계전공선택이기도 하고 평소 웹 사이트 만드는 것을 배워보고 싶었습니다. </p>
+</div>
+
+<div class="floating-box">
+    <h1> 교수님께 하고싶은 말 있나요? </h1>
+    <p> 최선을 다해 공부에 임하겠습니다. </p>
+</div>
+
+<div class="floating-box">
+    <h1> 학군단을 하면서 좋은점이 있다면 뭐가 있을까요? </h1>
+    <p> 리더쉽을 배양할 수 있고 큰 세상에 나가는데 밑받침이 됩니다. 여러분도 해보세요. </p>
+</div>
+
+
+</body></html>
