--- a/index.html
+++ b/index.html
@@ -1,6 +1,208 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+<html lang="ko"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <title> 스마트한 항성의 프로필 </title>
+<style>
+
+ h1 { border-radius: 133px 133px 133px 133px;
+     -moz-border-radius: 133px 133px 133px 133px;
+     -webkit-border-radius: 133px 133px 133px 133px;
+     border: 0px solid #000000;
+     text-align: center;
+     background: rgba(255,0,132,1);
+     background: -moz-linear-gradient(left, rgba(255,0,132,1) 0%, rgba(241,111,92,1) 33%, rgba(241,111,92,1) 70%, rgba(255,0,132,1) 98%, rgba(255,0,132,1) 100%);
+     background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,0,132,1)), color-stop(33%, rgba(241,111,92,1)), color-stop(70%, rgba(241,111,92,1)), color-stop(98%, rgba(255,0,132,1)), color-stop(100%, rgba(255,0,132,1)));
+     background: -webkit-linear-gradient(left, rgba(255,0,132,1) 0%, rgba(241,111,92,1) 33%, rgba(241,111,92,1) 70%, rgba(255,0,132,1) 98%, rgba(255,0,132,1) 100%);
+     background: -o-linear-gradient(left, rgba(255,0,132,1) 0%, rgba(241,111,92,1) 33%, rgba(241,111,92,1) 70%, rgba(255,0,132,1) 98%, rgba(255,0,132,1) 100%);
+     background: -ms-linear-gradient(left, rgba(255,0,132,1) 0%, rgba(241,111,92,1) 33%, rgba(241,111,92,1) 70%, rgba(255,0,132,1) 98%, rgba(255,0,132,1) 100%);
+     background: linear-gradient(to right, rgba(255,0,132,1) 0%, rgba(241,111,92,1) 33%, rgba(241,111,92,1) 70%, rgba(255,0,132,1) 98%, rgba(255,0,132,1) 100%);
+     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0084', endColorstr='#ff0084', GradientType=1 );}
+    .floating-box {
+        display: inline-block;
+        width: 800px;
+        margin: 10px;
+        border: 3px solid deepskyblue;
+        float: left;
+        box-shadow: 5px 5px 5px black;
+    }
+
+.시간표 {background-color: aquamarine}
+ .공강 {background-color:skyblue}
+</style>
+
+
+</head>
 <body>
-아직 과제물 제출하지 않았습니다.
-</body>
-</html>
+<div class="floating-box">
+    <h1> WHO? </h1>
+    <p>&nbsp;&nbsp;&nbsp; &nbsp;안녕하세요. 한성대학교 경영학부 4학년 재학중인 조항성이라고 합니다. </p>
+    &nbsp; &nbsp;&nbsp;&nbsp;<img src="증명사진.jpg;" alt="증명사진" width="250" >
+    <ul>
+        <li> 이름 : 조항성 </li>
+        <li> 학번 : 1332083 </li>
+        <li> 주전공: 경영학부 </li>
+        <li> 연계전공: CRM 디지털마케팅 </li>
+        <li> 196 ROTC / 한성대 학군단 학군사관후보생 #55 </li>
+    </ul>
+</div>
+
+<div class="floating-box">
+    <h1> 기본 인적사항 </h1>
+    <ul>
+        <li> 생년월일 : 1994년 11월 03일 </li>
+        <li> 사는 곳 : 서울특별시 양천구 목동중앙본로2길 </li>
+        <li> 이메일 : gkdtjd0303@naver.com </li>
+        <li> 연락처 : 010-3220-1541 </li>
+        <li> 병역 : 미필 ( 17년 임관예정 ) </li>
+    </ul>
+</div>
+
+<div class="floating-box">
+    <h1> 4학년 1학기 과목 </h1>
+    <br />
+    <p>
+    <ul>
+        <li class="subject-list"><b>Cash Class</b></li>
+        <ol class="subject-list">
+            <li>담당교수: 노광현</li>
+            <li>강의실: 탐402호</li>
+        </ol>
+        <br />
+        <li class="subject-list"><b>웹프로그래밍</b></li>
+        <ol class="subject-list">
+            <li>담당교수: 허준영</li>
+            <li>강의실: 공B105호</li>
+        </ol>
+        <br/>
+        <li class="subject-list"><b>군사학</b></li>
+        <ol class="subject-list">
+            <li>담당교수: 훈육관님,단장님</li>
+            <li>강의실: 학군단 강의실</li>
+        </ol>
+        <br />
+        <li class="subject-list"><b>대학수학1</b></li>
+        <ol class="subject-list">
+            <li>담당교수: 민경진</li>
+            <li>강의실: 탐405</li>
+        </ol>
+
+    </ul>
+    </p>
+    <br/>
+    <p><a href="#menu"><ins>메뉴로</ins></a> </p>
+    <br />
+    <hr />
+    <br />
+
+
+
+</div>
+
+<div class="floating-box">
+    <h1> 2016년도 시간표 </h1>
+
+   <table border="1">
+        <tr >
+            <th colspan="6"> 조항성 4학년 1학기 시간표</th>
+        </tr>
+
+        <tr>
+            <th></th>  <th>월</th>   <th>화</th>    <th>수</th>    <th>목</th>   <th>금</th>
+        </tr>
+        <tr>
+            <th> 1교시</th>
+            <td>
+            </td>
+            <td class="시간표" rowspan="2">
+                웹 프로그래밍
+            </td>
+            <td class="공강" rowspan="9">
+                &nbsp;공&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;강&nbsp;
+            </td>
+            <td></td>
+            <td class="공강" rowspan="9">
+                &nbsp;공&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;강&nbsp;
+            </td>
+        </tr>
+        <tr>
+            <th> 2교시</th>
+
+            <td >
+            </td>
+            <td >
+            </td>
+
+        </tr>
+
+        <tr>
+            <th> 3교시</th>
+            <td>
+            </td>
+            <td class="시간표" rowspan="2">
+                군사학
+            </td>
+            <td>
+            </td>
+        </tr>
+
+
+
+        <tr>
+            <th> 4교시</th>
+            <td>
+            </td>
+
+            <td class="시간표" >
+                웹 프로그래밍
+            </td>
+        </tr>
+        <tr>
+            <th> 5교시</th>
+            <td class="시간표" rowspan="3">Cash Class</td>
+
+            <td class="시간표" rowspan="2">
+                대학수학1
+            </td><td>
+        </td>
+        </tr>
+        <tr>
+            <th> 6교시</th>
+            <td>
+        </td>
+        </tr>
+        <tr>
+            <th> 7교시</th>
+            <td></td>
+            <td></td>
+
+        </tr>
+
+        <tr>
+            <th> 8교시</th>
+            <td></td>
+            <td></td>
+            <td class="시간표" rowspan="2">
+                군사학 </td>
+        </tr>
+        <tr>
+            <th> 9교시</th>
+            <td></td>
+            <td>
+        </td>
+        </tr>
+
+
+
+    </table>
+
+
+</div>
+
+<div class="floating-box">
+    <h1> 학군단 홍보 </h1>
+    <img src="학군포스터.jpg;" alt="학군포스터" width="400" >
+    <h3> 인생에 있어 가장 훌륭한 선택! 당신도 도전하세요! </h3>
+</div>
+
+
+</body></html>
